@@ -1,3 +1,7 @@
+Wed Dec 11 17:00:21 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
+
+	* ace/WIN32_Asynch_IO.cpp: Fixed a warning in Borland builds.
+
 Tue Dec 10 18:10:41 2002  Steve Huston  <shuston@riverace.com>
 
         * tests/Proactor_Test.cpp: Changed the default proactor type to
